--- a/style.css
+++ b/style.css
@@ -2,10 +2,35 @@
 		html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,hr,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfont,thead,tr,th,td{padding:0;margin:0;border:none;outline:none;vertical-align:baseline;font-family:inherit;font-size:100%;}dfn,i,cite,var,address,em{font-style:normal;}th,b,strong,h1,h2,h3,h4,h5,h6{font-weight:normal;}textarea,input,select{font-family:inherit;font-size:1em;}blockquote,q{quotes:none;}q:before,q:after,blockquote:before,blockquote:after{content:'';content:none;}ol,ul{list-style:none;}ins{text-decoration:none;}del{text-decoration:line-through;}table{border-collapse:collapse;border-spacing:0;}caption,th,td{text-align:left;}:focus{outline:none;}
 
 .blue-border {
-	border-color: #3299bb;
+	border-color: #004358;
 	border-width: 5px;
 	border-style: solid;
 	border-radius: 50%;
+}
+
+.navbar-fixed-top {
+	background-color: #004358;
+}
+
+.navbar-fixed-bottom {
+	height: 25px;
+	line-height: 25px;
+}
+
+.navbar-header {
+	text-align: center;
+	width: 100%;
+}
+
+.navbar-header a {
+	color: #FBFAF8;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.navbar-header a:hover {
+	font-weight:bold;
+	text-decoration: none;
 }
 
 html {
@@ -13,44 +38,51 @@ html {
 }
 
 body {
-	background-color: #e9e9e9;
+	background-color: #FBFAF8;
 }
 
 header {
-	line-height: 25px;
 	font-weight: normal;
-	background-color: #424242;
+	background-color: #22272A;
 	text-align: center;
-	width: 100%;
-	margin: auto;
-}
-
-section header {
-	background-color: #e9e9e9;
 }
 
 h1 {
 	font-weight: bold;
-	color: #3299bb;
+	color: #F8FAF8;
 }
 
 h2 {
 	font-weight: normal;
-	color: #e9e9e9;
+	color: #FBFAF8;
 }
 
-header h3 {
+h3 {
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
 
-footer {
-	font-weight:lighter;
-	background-color: #424242;
-	color: #e9e9e9;
+section header {
+	text-align:center;
+	height:40px;
+	line-height:40px;
+	background-color:#004358;
+}
+
+section header h1 {
+	display: inline-block;
+}
+
+article {
 	text-align: center;
-	position:absolute;
-	bottom:0;
-	width: 100%;
-	line-height: 25px;
+	color: #22272A;
+	margin:5%
+}
+
+footer {
+	font-size: 75%;
+	font-weight:lighter;
+	background-color: #22272A;
+	color: #FBFAF8;
+	text-align: center;
 }
