--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ h3 {
 	padding-bottom: 10px;
 }
 
+h3 a {
+	padding-left: 10px;
+	padding-right: 10px;
+}
 section header {
 	text-align:center;
 	height:40px;
