--- a/style.css
+++ b/style.css
@@ -1,96 +1,283 @@
-		/* reset */
-		html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,hr,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfont,thead,tr,th,td{padding:0;margin:0;border:none;outline:none;vertical-align:baseline;font-family:inherit;font-size:100%;}dfn,i,cite,var,address,em{font-style:normal;}th,b,strong,h1,h2,h3,h4,h5,h6{font-weight:normal;}textarea,input,select{font-family:inherit;font-size:1em;}blockquote,q{quotes:none;}q:before,q:after,blockquote:before,blockquote:after{content:'';content:none;}ol,ul{list-style:none;}ins{text-decoration:none;}del{text-decoration:line-through;}table{border-collapse:collapse;border-spacing:0;}caption,th,td{text-align:left;}:focus{outline:none;}
-
-.blue-border {
-	border-color: #004358;
-	border-width: 5px;
-	border-style: solid;
-	border-radius: 50%;
-}
-
-.navbar-fixed-top {
-	background-color: #004358;
-}
-
-.navbar-fixed-bottom {
-	height: 25px;
-	line-height: 25px;
-}
-
-.navbar-header {
-	text-align: center;
-	width: 100%;
-}
-
-.navbar-header a {
-	color: #FBFAF8;
-	padding-left: 10px;
-	padding-right: 10px;
-}
-
-.navbar-header a:hover {
-	font-weight:bold;
-	text-decoration: none;
-}
-
-html {
-	font-family: 'Inconsolata';
-}
-
 body {
-	background-color: #FBFAF8;
+  background: #282a36;
+  color: #f8f8f2;
+  font-family: 'Inconsolata';
+  font-size: .9em;
+  display: flex;
+  justify-content: center;
 }
 
-header {
-	font-weight: normal;
-	background-color: #22272A;
-	text-align: center;
+.container {
+  max-width: 650px;
 }
 
 h1 {
-	font-weight: bold;
-	color: #F8FAF8;
-    height: 40px;
-    line-height: 40px;
+  font-weight: 400;
+  margin: 0;
 }
 
 h2 {
-	font-weight: normal;
-	color: #FBFAF8;
+  color: #7c809c;
+  font-weight: 300;
+  margin: 0 0 .5em 0;
 }
 
-h3 {
-	padding-top: 10px;
-	padding-bottom: 10px;
+.links {
+  margin: 0 0 1.5em 0;
 }
 
-h3 a {
-	padding-left: 10px;
-	padding-right: 10px;
+.links a {
+  color: #8be9fd;
+  margin: auto 1em auto 0;
+  text-decoration: none;
 }
 
-.section-header {
-	line-height:40px;
-	height:40px;
-	text-align:center;
-	background-color:#004358;
+.intro {
+  margin: 0 0 2em 0;
 }
 
-section header h1 {
-	display: inline-block;
+.intro a {
+  color: #f1fa8c;
+  text-decoration: none;
 }
 
-article {
-    padding-top: 40px;
-	text-align: center;
-	color: #22272A;
-	margin:5%
+.intro .title {
+  cursor: pointer;
+  foint-size: 1.2em;
+  font-weight: 700;
+  margin: .8em 0;
 }
 
-footer {
-	font-size: 75%;
-	font-weight:lighter;
-	background-color: #22272A;
-	color: #FBFAF8;
-	text-align: center;
+.intro .title:before {
+  content: '[+] ';
+}
+
+.intro .exp {
+  display: none;
+}
+
+.intro ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.intro ul li {
+  margin: 2em 0;
+}
+
+.timeline {
+  margin: 0 0 2em 0;
+}
+
+.timeline a {
+  color: #8be9fd;
+  text-decoration: none;
+}
+
+.timeline .title {
+  cursor: pointer;
+  font-size: 1.2em;
+  font-weight: 700;
+  margin: .8em 0;
+}
+
+.timeline .title:before {
+  content: "\f0da ";
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  font-decoration: inherit;
+  font-size: 18px;
+  top: 1px;
+  padding-right: 0.25em;
+  position: relative;
+}
+
+.timeline .exp {
+  display: none;
+}
+
+.timeline ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.timeline ul li {
+  margin: 2em 0;
+}
+
+.timeline li {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.timeline li .left {
+  color: #7c809c;
+  font-weight: 300;
+  min-width: 200px;
+}
+
+.timeline li .left:before {
+  content: '';
+  display: inline-block;
+  width: .7em;
+  height: .7em;
+  border-radius: 100%;
+  margin: 0 2em 0 0;
+}
+
+.timeline li .desc {
+  display: flex;
+  flex-direction: column;
+}
+
+.timeline li .desc .info {
+  visibility: hidden;
+  max-height: 0;
+  transition: visibility 0s, max-height 0.5s linear;
+}
+
+.timeline li .desc:hover .info {
+  visibility: visible;
+  max-height: 100px;
+  transition: max-height 0.5s linear;
+}
+
+.timeline .loading {
+  animation: blinker 1s linear infinite;
+  margin: 1em 0 0 0;
+}
+
+.timeline .loading.hide {
+  display: none;
+}
+
+.projects {
+  margin: 0 0 2em 0;
+}
+
+.projects a {
+  color: #8be9fd;
+}
+
+.projects .title {
+  cursor: pointer;
+  font-size: 1.2em;
+  font-weight: 700;
+  margin: .8em 0;
+}
+
+.projects .title:before {
+  content: "\f0da ";
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  font-decoration: inherit;
+  font-size: 18px;
+  top: 1px;
+  padding-right: 0.25em;
+  position: relative;
+}
+
+.projects .exp {
+  display: none;
+}
+
+.projects ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.projects ul li {
+  margin: 2em 0;
+}
+
+.projects .loading {
+  animation: blinker 1s linear infinite;
+  margin: 1em 0 0 0;
+}
+
+.projects .loading.hide {
+  display: none;
+}
+
+.expand .title {
+  cursor: pointer;
+}
+
+.expand .title:before {
+  content: "\f0d7 ";
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  font-decoration: inherit;
+  font-size: 18px;
+  top: 1px;
+  padding-right: 0.25em;
+  position: relative;
+}
+
+.expand .exp {
+  display: block;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0.0;
+  }
+}
+
+.end {
+  margin: 0 0 2em 0;
+}
+
+.end .title {
+  cursor: pointer;
+  font-size: 1.2em;
+  font-weight: 700;
+  margin: .8em 0;
+}
+
+.end .title:before {
+  content: '[+] ';
+}
+
+.end .exp {
+  display: none;
+}
+
+.end ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.end ul li {
+  margin: 20e 0;
+}
+
+.professional .left:before {
+  background: #50fa7b;
+}
+
+.professional em {
+  color: #50fa7b;
+  font-style: normal;
+}
+
+.personal .left:before {
+  background: #bd93f9;
+}
+
+.personal em {
+  color: #bd93f9;
+  font-style: normal;
+}
+
+.event .left:before {
+  background: #ff5555;
+}
+
+.event em {
+  color: #ff5555;
+  font-style: normal;
 }
