--- a/style.css
+++ b/style.css
@@ -28,12 +28,14 @@ h2 {
 
 .links {
   margin: 0 0 1.5em 0;
+  line-height: 1.5em;
 }
 
 .links a {
   color: #8be9fd;
   margin: auto 1em auto 0;
   text-decoration: none;
+  white-space: nowrap;
 }
 
 .intro {
